fix main icon with dark theme
Signed-off-by: Julien Veyssier <eneiluj@posteo.net>

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -2,6 +2,6 @@
     background-image: url(./../img/app-dark.svg);
 }
 
-body.dark .icon-gitlab {
+body.theme--dark .icon-gitlab {
     background-image: url(./../img/app.svg);
 }
