--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1,3 +1,8 @@
 .icon-gitlab {
     background-image: url(./../img/app-dark.svg);
 }
+
+/* for NC <= 24 */
+body.theme--dark .icon-gitlab {
+	background-image: url(./../../img/app.svg);
+}
