--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1,5 +1,6 @@
 .icon-gitlab {
-    background-image: url(./../img/app-dark.svg);
+	background-image: url(./../img/app-dark.svg);
+	filter: var(--background-invert-if-dark);
 }
 
 /* for NC <= 24 */
